<resources>
    <string name="app_name">Journal</string>
    <string name="enter_email">eg: example@host.com</string>
    <string name="enter_password">Password</string>
    <string name="signin">Sign In with Google</string>
    <string name="login">Sign In</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="add_note">Add Note</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="separator_line">Separator Line</string>
    <string name="app_logo">AppLogo</string>
    <string name="sign_in_to_journal">Sign in to Journal</string>
    <string name="or">Or</string>
    <string name="enter_your_email_and_password">Enter your email and password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_a_journal_account_in_seconds">Create a Journal Account in Seconds…</string>
    <string name="choose_password">Choose Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_empty">Email can\'t be empty</string>
    <string name="enter_email_to_recover_password">Enter email to recover password</string>
    <string name="recover_password">RecoverPassword</string>
</resources>
