<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginAndSignUpActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/signin_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_logo"
                android:scaleType="center"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:text="@string/sign_in_to_journal"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <Button
                android:id="@+id/sign_in_using_google"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:padding="8dp"
                android:drawableStart="@drawable/common_google_signin_btn_icon_dark_focused"
                android:text="@string/signin"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/or"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email_and_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginMessage"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="#E10E13"
                android:layout_margin="1dp"/>

            <EditText
                android:id="@+id/signin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/signin_password"
                android:layout_width="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/login"
                android:textColor="@color/cardview_light_background"
                android:background="@drawable/button"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/forgot_your_password"
                android:textSize="12sp"
                android:id="@+id/forgotPassword"
                android:layout_gravity="end"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
